feat(update) index.html header clean

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         </label>
 
         <nav>
-            <ul class="main-nav"> <li><a href="#">Inicio</a></li>
+            <ul class="main-nav"> 
+                <li><a href="#">Inicio</a></li>
                 <li><a href="#">Tienda</a></li>
                 <li><a href="#">Colecciones</a></li>
                 <li><a href="#">Contacto</a></li>
