feat(fix) index.html

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <img src="https://img.freepik.com/vector-premium/logotipo-tienda-ropa-belleza-dibujada-mano_637057-230.jpg?semt=ais_hybrid&w=740" width="150" height="150" alt="Logo png.">
             </div>
         <ul>
-        <p href="#">Creemos que la moda no se trata solo de ropa, sino de una forma de autoexpresión. Nuestra colección, cuidadosamente seleccionada, encarna la esencia del glamour</p>
+        <span href="#">Creemos que la moda no se trata solo de ropa, sino de una forma de autoexpresión. Nuestra colección, cuidadosamente seleccionada, encarna la esencia del glamour</span>
         </ul>
         <div class="ad-banner">
             <h5 class="title">Suscríbete a nuestro boletín informativo</h5>
