feat(update) index.html integration pages

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="style/reset.css">
     <link rel="stylesheet" href="style/header.css">
     <link rel="stylesheet" href="style/sidebar.css">
+    <link rel="stylesheet" href="style/main_section.css">
+    <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/footer.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Moda - Tu Marca</title>
@@ -28,24 +30,70 @@
             </ul>
         </nav>
     </header>
-    <!-- rider diaz -->
-    <aside class="sidebar">
-            <div class="contenedor-flex">
-                <img src="https://img.freepik.com/vector-premium/logotipo-tienda-ropa-belleza-dibujada-mano_637057-230.jpg?semt=ais_hybrid&w=740" width="150" height="150" alt="Logo png.">
-            </div>
-        <ul>
-        <span href="#">Creemos que la moda no se trata solo de ropa, sino de una forma de autoexpresión. Nuestra colección, cuidadosamente seleccionada, encarna la esencia del glamour</span>
-        </ul>
-        <div class="ad-banner">
-            <h5 class="title">Suscríbete a nuestro boletín informativo</h5>
-            <form action="index.html">
-                <div class="input-group mb-16">
-                    <input type="email" class="form-control" id="email" name="email" required="" placeholder="Tu Email">
-                    <button class="button-30" role="button">Suscríbete</button>
+    <main class="main-content">
+
+        <!-- rider diaz -->
+        <aside class="sidebar">
+                <div class="contenedor-flex">
+                    <img src="https://img.freepik.com/vector-premium/logotipo-tienda-ropa-belleza-dibujada-mano_637057-230.jpg?semt=ais_hybrid&w=740" width="150" height="150" alt="Logo png.">
                 </div>
-            </form>
-        </div>
-    </aside>
+            <ul>
+            <span href="#">Creemos que la moda no se trata solo de ropa, sino de una forma de autoexpresión. Nuestra colección, cuidadosamente seleccionada, encarna la esencia del glamour</span>
+            </ul>
+            <div class="ad-banner">
+                <h5 class="title">Suscríbete a nuestro boletín informativo</h5>
+                <form action="index.html">
+                    <div class="input-group mb-16">
+                        <input type="email" class="form-control" id="email" name="email" required="" placeholder="Tu Email">
+                        <button class="button-30" role="button">Suscríbete</button>
+                    </div>
+                </form>
+            </div>
+        </aside>
+
+        <!-- antonio araujo -->
+        <section class="main-section">
+            <div class="content">
+                <h3 class="body_title body_title-size">    Tendencias</h3> 
+                    <p> ultimas tendencias en la moda</p>
+                    <div class="image-container">
+                        <img src="img/tendencias.jpg" >  
+                    </div>
+            </div>
+
+            <div class="content">
+                <h3 class="body_title body_title-size">    descuentos en marcas</h3> 
+                    <p> Disfruta de nuestros descuentos en nuestras amplia seleccion de marcas</p>
+                    <div class="image-container2">
+                        <img src="img/Descuentos.jpg" >
+                    </div>
+            </div>
+
+            </div>
+
+        </section>
+
+        <section class="main-section">
+            <div class="content">
+                <h3 class="body_title body_title-size">    coleccion de verano</h3> 
+                    <p> viste con las tendencias de ultimo momento con nuestra coleccion de verano</p>
+                    <div class=" image-container3">
+                        <img src="img/verano1.jpg">
+                    </div>
+            </div>
+
+            <div class="content">
+                <h3 class="body_title body_title-size">    descuentos en marcas</h3> 
+                    <p> Disfruta de nuestros descuentos en nuestras amplia seleccion de marcas</p>
+                    <div class="image-container2">
+                        <img src="img/Descuentos.jpg" >
+                    </div>
+            </div>
+
+        </section>
+
+
+    </main>   
     <!-- carlay sivira -->
      <footer class="footer-rosa">
             <h2 class="footer_titulo">⭐¡No te pierdas de las nuevas tendencias de moda!⭐</h2>
