feat(update) index.html integration pages

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </div>
 
             <div class="content">
-                <h3 class="body_title body_title-size">    descuentos en marcas</h3> 
+                <h3 class="body_title body_title-size">    Descuentos en Marcas</h3> 
                     <p> Disfruta de nuestros descuentos en nuestras amplia seleccion de marcas</p>
                     <div class="image-container2">
                         <img src="img/Descuentos.jpg" >
@@ -75,7 +75,7 @@
 
         <section class="main-section">
             <div class="content">
-                <h3 class="body_title body_title-size">    coleccion de verano</h3> 
+                <h3 class="body_title body_title-size">    Coleccion de Verano</h3> 
                     <p> viste con las tendencias de ultimo momento con nuestra coleccion de verano</p>
                     <div class=" image-container3">
                         <img src="img/verano1.jpg">
@@ -83,10 +83,10 @@
             </div>
 
             <div class="content">
-                <h3 class="body_title body_title-size">    descuentos en marcas</h3> 
-                    <p> Disfruta de nuestros descuentos en nuestras amplia seleccion de marcas</p>
+                <h3 class="body_title body_title-size">   Productos Destacados</h3> 
+                    <p> colección de productos destacados que está redefiniendo el estilo de la moda.</p>
                     <div class="image-container2">
-                        <img src="img/Descuentos.jpg" >
+                        <img src="img/modadestacada.jpg" >
                     </div>
             </div>
 
