--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style/header.css">
     <link rel="stylesheet" href="style/sidebar.css">
     <link rel="stylesheet" href="style/main_section.css">
+    <link rel="stylesheet" href="style/section_category_top.css">
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/footer.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -94,6 +95,20 @@
 
 
     </main>   
+
+    <!-- Miguel Polanco -->
+    <section class="category-section">
+        <h3>Categorías Destacadas</h3>
+        <ul>
+            <li><a href="#" style="text-decoration: none;">Novedades</a></li>
+            <li><a href="#" style="text-decoration: none;">Prendas de Fiesta</a></li>
+            <li><a href="#" style="text-decoration: none;">Ropa Casual</a></li>
+            <li><a href="#" style="text-decoration: none;">Denim</a></li>
+            <li><a href="#" style="text-decoration: none;">Calzado</a></li>
+            <li><a href="#" style="text-decoration: none;">Rebajas</a></li>
+        </ul>
+      </section>
+
     <!-- carlay sivira -->
      <footer class="footer-rosa">
             <h2 class="footer_titulo">⭐¡No te pierdas de las nuevas tendencias de moda!⭐</h2>
