feat(update) index.html

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <title>Moda - Tu Marca</title>
 </head>
 <body>
+    <!-- Miguel Perez -->
     <header>
         <a href="#" class="logo">Tu Marca de Moda</a>
 
